# Quack-Cluster-DuckLake

./: CLAUDE.md  README.md  analyze_deps.py  config.yaml  dependency_analysis_report.md  pyproject.toml
.claude/: superpower-loop.local.md
docs/plans/2026-04-07-quack-cluster-bugfix-plan/: _index.md  task-001-worker-error-class-impl.md  task-002-duckdb-connection-context-test.md  task-003-duckdb-connection-context-impl.md  task-006-worker-error-propagation-test.md  task-007-worker-error-propagation-impl.md  task-011-cache-atomic-ops-impl.md  task-013-exponential-backoff-impl.md  task-015-query-timeout-impl.md  task-022-docs-update.md
docs/plans/2026-04-07-quack-cluster-bugfix-plan/docs/plans/2026-04-07-quack-cluster-bugfix-plan/: task-004-temp-table-context-test.md  task-005-temp-table-context-impl.md  task-008-empty-result-distinction-test.md  task-009-empty-result-distinction-impl.md  task-010-cache-atomic-ops-test.md  task-012-exponential-backoff-test.md  task-014-query-timeout-test.md  task-016-file-validation-test.md  task-017-file-validation-impl.md  task-018-integration-resource-management.md  task-019-integration-error-handling.md  task-020-integration-fault-tolerance.md  task-021-config-retry-timeout.md
docs/plans/2026-04-07-quack-cluster-code-review-and-improvements/: _index.md  architecture.md  bdd-specs.md  best-practices.md
documentation/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  tutorial.md
quack_cluster/: coordinator.py  execution_plan.py  executor.py  planner.py  settings.py  worker.py
